--- a/cv.Rmd
+++ b/cv.Rmd
@@ -201,21 +201,21 @@ Greenhalgh, S. P., **Staudt Willet**, K. B., Rosenberg, J. M., & Koehler, M. J. 
 
 ## Invited Talks
 
-**Staudt Willet**, K. B. (2019, November). *Twitter kludge and conversation: Educators seeking coherence through hashtags and threads.* Talk for EPET PhD program brownbag seminar at Michigan State University: East Lansing, MI.
+**Staudt Willet**, K. B. (2019, November). *Content, conversation, & context: How educators talk to each other in Twitter #Edchat*. Talk for EPET PhD program brownbag seminar at Michigan State University: East Lansing, MI.
 
-**Staudt Willet**, K. B. (2019, September). *Insights for academic publishing.* Guest lecture for an EPET doctoral course, CEP 956: Mind, Media and Learning. Michigan State University: East Lansing, MI.
+**Staudt Willet**, K. B. (2019, September). *Insights for academic publishing*. Guest lecture for an EPET doctoral course, CEP 956: Mind, Media and Learning. Michigan State University: East Lansing, MI.
 
-**Staudt Willet**, K. B. (2018, November). *Bigger is not always better: Revisiting how and why educators use Twitter #Edchat.* Talk for EPET PhD program brownbag seminar at Michigan State University: East Lansing, MI.
+**Staudt Willet**, K. B. (2018, November). *Bigger is not always better: Revisiting how and why educators use Twitter #Edchat*. Talk for EPET PhD program brownbag seminar at Michigan State University: East Lansing, MI.
 
-**Staudt Willet**, K. B. (2018, October). *Experiences from the practicum.* Guest panelist for an EPET doctoral course, CEP 955: Research Design and Methods for Educational Psychology and Educational Technology. Michigan State University: East Lansing, MI.
+**Staudt Willet**, K. B. (2018, October). *Experiences from the practicum*. Guest panelist for an EPET doctoral course, CEP 955: Research Design and Methods for Educational Psychology and Educational Technology. Michigan State University: East Lansing, MI.
 
-**Staudt Willet**, K. B. (2017, November). *Once more unto the practicum, dear friends: Research lessons from studying social interactions on social media.* Talk for EPET PhD program brownbag seminar at Michigan State University: East Lansing, MI. 
+**Staudt Willet**, K. B. (2017, November). *Once more unto the practicum, dear friends: Research lessons from studying social interactions on social media*. Talk for EPET PhD program brownbag seminar at Michigan State University: East Lansing, MI. 
 
 **Staudt Willet**, K. B. (2016, August). *How did we get here?* Keynote address at Passion Talks Conference 2016. Fremont, CA.
 
-**Staudt Willet**, K. B. (2015, September). *Patterns of online communities.* Webinar presented for Indigitous Sessions. Online.
+**Staudt Willet**, K. B. (2015, September). *Patterns of online communities*. Webinar presented for Indigitous Sessions. Online.
 
-**Staudt Willet**, K. B. (2014, March). *What games say.* Guest lecture for an undergraduate course in Film, Media, & Teacher Education. Millersville University: Millersville, PA.
+**Staudt Willet**, K. B. (2014, March). *What games say*. Guest lecture for an undergraduate course in Film, Media, & Teacher Education. Millersville University: Millersville, PA.
 
 # Service
 
