added new publication:

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -45,7 +45,7 @@ PhD, Educational Psychology & Educational Technology \hfill 2021 (expected)
 
 * Dissertation: *Into the edu-verse: Early-career educators seeking induction support on social media*
 * Committee: Matthew Koehler, Christine Greenhow, Ralph Putnam, Gail Richmond
-* Proposal defense: November 26, 2019 (scheduled)
+* Defended proposal: November 26, 2019 (scheduled) [View slides](https://bretsw.github.io/dissertation-proposal/)
 * Advanced to candidacy: February 3, 2019
 
 MA, Educational Technology \hfill 2015
@@ -90,9 +90,9 @@ Bucknell University \hfill Lewisburg PA
 
 **Staudt Willet**, K. B., & Carpenter, J. P. (under review). Teachers on Reddit? Exploring contributions and interaction in four education-related subreddits.
 
-Carpenter, J. P., **Staudt Willet**, K. B., Koehler, M. J., & Greenhalgh, S. P. (in revision). Spam and educators’ Twitter use: Methodological considerations and challenges.
-
 Greenhalgh, S. P., Rosenberg, J. M., **Staudt Willet**, K. B., Koehler, M. J., & Akcaoglu, M. (in revision). It's about time! Comparing synchronous and asynchronous activity in a teacher-focused Twitter hashtag.
+
+Carpenter, J. P., **Staudt Willet**, K. B., Koehler, M. J., & Greenhalgh, S. P. (in press). Spam and educators’ Twitter use: Methodological considerations and challenges. *TechTrends*.
 
 Greenhalgh, S. P., **Staudt Willet**, K. B., & Koehler, M. J. (in press). Approaches to Mormon identity and practice in the #ldsconf Twitter space. *Journal of Media and Religion*.
 
@@ -160,7 +160,7 @@ Rosenberg, J. M., Rutherford, T., & **Staudt Willet**, K. B. (2020, April). *Whi
 
 **Staudt Willet**, K. B. (2020, April). *Can you hear me now? Teachers’ versus researchers’ measures of the Twitter #Edchat affinity space*. Paper to be presented at the American Educational Research Association (AERA) Annual Meeting 2020. San Francisco, CA.
 
-**Staudt Willet**, K. B., Heath, M. K., & Krutka, D. G. (2020, April).*The need for technoethics in teacher education: A critical analysis of literature*. Paper to be presented at the American Educational Research Association (AERA) Annual Meeting 2020. San Francisco, CA.
+**Staudt Willet**, K. B., Heath, M. K., & Krutka, D. G. (2020, April). *The need for technoethics in teacher education: A critical analysis of literature*. Paper to be presented at the American Educational Research Association (AERA) Annual Meeting 2020. San Francisco, CA.
 
 Greenhalgh, S. P., **Staudt Willet**, K. B., & Koehler, M. J.(2019, October). *Twitter hashtags and religious learning: Mormon identity and participatory practice in #ldsconf.* Paper presented at the Association for Educational Communications and Technology (AECT) International Convention 2019. Las Vegas, NV.
 
@@ -199,6 +199,8 @@ Greenhalgh, S. P., **Staudt Willet**, K. B., Rosenberg, J. M., & Koehler, M. J. 
 **Willet**, K. B. (2001, February). *The shortest closed path on an arithmetic surface.* Paper presented at Moravian College Student Mathematics Conference 2001. Bethlehem, PA.
 
 ## Invited Talks
+
+**Staudt Willet**, K. B., & Bork, W. (2019, December). *Electronic assessment*. Talk for Master of Arts in Educational Technology (MAET) instructor huddle at Michigan State University: East Lansing, MI.
 
 **Staudt Willet**, K. B. (2019, November). *Content, conversation, & context: How educators talk to each other in Twitter #Edchat*. Talk for EPET PhD program brownbag seminar at Michigan State University: East Lansing, MI.
 
@@ -384,8 +386,6 @@ American Educational Research Association (AERA)
 * *Division C* – Learning & Instruction
 * *Division K* – Teaching & Teacher Education
 * *Technology as an Agent of Change in Teaching & Learning* (TACTL) SIG
-
-Association of Internet Researchers (AoIR)
 
 Society for Information Technology and Teacher Education (SITE)
 
