added leadership award

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -57,6 +57,9 @@ BA, Mathematics & Sociology \hfill 2003
 
 # Awards & Funding
 
+*Disciplinary Leadership Award* - $2,000 \hfill 2019  
+Michigan State University, Council of Graduate Students - East Lansing MI
+
 *Outstanding Paper Award* \hfill 2019  
 SITE International Conference \hfill Las Vegas NV
 
